Fix for inline editing on Firefox

--- a/app/assets/stylesheets/partials/_inline_editing.scss
+++ b/app/assets/stylesheets/partials/_inline_editing.scss
@@ -68,17 +68,18 @@
       background: transparent;
       border: 1px solid transparent;
       cursor: pointer;
+      pointer-events: none;
       user-select: none;
 
       + .button-container {
         display: none;
 
       }
-
-      &:hover {
-        border: 1px solid $color-gainsboro;
-      }
     }
+  }
+
+  &:hover input {
+    border: 1px solid $color-gainsboro;
   }
 }
 
