--- a/app/assets/stylesheets/steps.scss
+++ b/app/assets/stylesheets/steps.scss
@@ -239,6 +239,7 @@
         overflow: hidden;
         padding: 2px 5px;
         width: 100%;
+        pointer-events: none;
 
         &:focus {
           outline: 0;
